# budget

./: .gitignore  excel_formulas.txt  pyproject.toml  setup.cfg  summarize.py
budget/: __main__.py  home.py
budget/cli/: __main__.py  generate_year.py  summarize.py
budget/xlwings/: __init__.py  app.py  budget_month.py  budget_summary.py  budget_year.py
data/: budget_template.xlsm
scripts/: generate_year.py  summarize.py
src/budget/: __init__.py  app.py  budget_month.py  budget_summary.py  budget_year.py  budget_years.py  summarizable.py  summary.py  utils.py
src/budget.egg-info/: PKG-INFO  SOURCES.txt
