[tool.poetry]
name = "budget"
version = "0.1.0"
description = ""
authors = ["Franco Ruggeri <francoruggeri95@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.31.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pylint."MESSAGE CONTROL"]
disable="""
    missing-module-docstring,
    missing-function-docstring,
    missing-class-docstring,
"""